--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<!-- SEO 기본 설정 -->
+<meta name="description" content="계란 박스 게임 - 숫자를 드래그해서 합이 10이 되면 오렌지가 사라지는 퍼즐 게임. 누구나 쉽게 즐길 수 있는 뇌 자극 게임!">
+<meta name="keywords" content="게임, 퍼즐게임, 숫자게임, 합이 10, 수학게임, 브레인게임, 캐쥬얼게임, 오렌지게임, Egg Game">
+<meta property="og:title" content="계란 박스 게임 – 합이 10이 되면 사라지는 퍼즐">
+<meta property="og:description" content="숫자를 드래그해서 합이 10을 만들면 오렌지가 사라지는 재미있는 퍼즐 게임. 모바일, PC 모두 가능!">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://kkhj218-netizen.github.io/Egg-game/">
+<meta property="og:image" content="https://your-image-url.jpg">
+<meta name="robots" content="index, follow">
+
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -862,3 +872,4 @@
 
 </body>
 </html>
+
