--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       padding: 20px;
     }
 
+    /* 전체 레이아웃 */
     .layout {
       display: flex;
       gap: 24px;
@@ -34,6 +35,7 @@
       }
     }
 
+    /* 게임 박스 */
     .frame {
       width: 900px;
       max-width: 100%;
@@ -60,7 +62,8 @@
 
     .hidden { display: none !important; }
 
-    /* 메뉴 */
+    /* ===================== 메뉴 화면 ===================== */
+
     .menu-layout {
       display: flex;
       justify-content: space-between;
@@ -79,14 +82,14 @@
       font-size: 18px;
       font-weight: 700;
       color: #16a34a;
-      text-shadow: 1px 1px 0 white;
+      text-shadow: 1px 1px 0 #fff;
     }
 
     .main-title {
       font-size: 32px;
       font-weight: 900;
       color: #f97316;
-      text-shadow: 2px 2px 0 white, 0 0 4px rgba(0,0,0,0.2);
+      text-shadow: 2px 2px 0 #fff, 0 0 4px rgba(0,0,0,0.2);
     }
 
     .big-orange-btn {
@@ -149,7 +152,8 @@
       cursor: pointer;
     }
 
-    /* 게임 화면 */
+    /* ===================== 게임 화면 ===================== */
+
     .game-header {
       display: flex;
       justify-content: space-between;
@@ -305,12 +309,13 @@
   <div class="frame">
     <div class="inner">
 
-      <!-- 메뉴 -->
+      <!-- ===================== 메뉴 화면 ===================== -->
       <div id="menuScreen">
         <div class="menu-layout">
           <div class="title-wrap">
             <div class="main-sub">성포 본척척 의원</div>
             <div class="main-title">계란 박스</div>
+
             <button id="playBtn" class="big-orange-btn">
               <span>Play</span>
             </button>
@@ -336,7 +341,7 @@
         </div>
       </div>
 
-      <!-- 게임 화면 -->
+      <!-- ===================== 게임 화면 ===================== -->
       <div id="gameScreen" class="hidden">
 
         <div class="game-header">
@@ -413,7 +418,7 @@
 </div>
 
 <script>
-  /* ==== JS는 이전 버전 100% 그대로 복구 ==== */
+  /* ===================== 게임 로직 ===================== */
 
   const ROWS = 10;
   const COLS = 17;
