--- a/index.html
+++ b/index.html
@@ -386,29 +386,26 @@
     </div>
   </div>
 
-  <!-- 광고 영역 -->
-  <div class="ad-container">
-    <div class="ad-title">추천 상품</div>
+<div class="coupang-wrap">
+  <script src="https://ads-partners.coupang.com/g.js"></script>
+  <script>
+    new PartnersCoupang.G({
+      "id": 946909,
+      "template": "carousel",
+      "trackingCode": "AF5786108",
+      "width": "100%",
+      "height": "200",
+      "tsource": ""
+    });
+  </script>
+</div>
 
-    <div id="coupang-ad">
-      <script src="https://ads-partners.coupang.com/g.js"></script>
-      <script>
-        new PartnersCoupang.G({
-          "id": 944627,
-          "trackingCode": "AF5786108",
-          "subId": null,
-          "template": "carousel",
-          "width": "320",
-          "height": "250"
-        });
-      </script>
-    </div>
+<p class="coupang-notice">
+  이 포스팅은 쿠팡 파트너스 활동의 일환으로,<br>
+  이에 따른 일정액의 수수료를 제공받습니다.
+</p>
 
-    <p class="coupang-notice">
-      이 게임은 쿠팡 파트너스 활동의 일환으로,<br>
-      이에 따른 일정액의 수수료를 제공받습니다.
-    </p>
-  </div>
+<!-- Coupang Partners Banner END -->
 
 </div>
 
@@ -730,3 +727,4 @@
 
 </body>
 </html>
+
