Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
       <div id="menuScreen">
         <div class="menu-layout">
           <div class="title-wrap">
-            <div class="main-sub">성포 본척척 의원</div>
+            <div class="main-sub">성포 본척척 의원!</div>
             <div class="main-title">계란 박스</div>
 
             <button id="playBtn" class="big-orange-btn">
@@ -727,4 +727,5 @@
 
 </body>
 </html>
+
 
